objects/ssot__RecruitmentRequisition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultPostingLanguage__c</fullName>
        <label>Default Posting Language</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Default Posting Language</masterLabel>
            <refAttrDeveloperName>DefaultPostingLanguage</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedHireDate__c</fullName>
        <label>Expected Hire Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Expected Hire Date</masterLabel>
            <refAttrDeveloperName>ExpectedHireDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalVacancyTitleName__c</fullName>
        <label>External Vacancy Title</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>External Vacancy Title</masterLabel>
            <refAttrDeveloperName>ExternalVacancyTitleName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalVacancyTitle__c</fullName>
        <label>External Vacancy Title</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>External Vacancy Title</masterLabel>
            <refAttrDeveloperName>ExternalVacancyTitle</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Recruitment Requisition</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Recruitment Requisition</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentReqApprvlStatus__c</fullName>
        <label>Recruitment Requisition Approval Status</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Recruitment Requisition Approval Status</masterLabel>
            <refAttrDeveloperName>RecruitmentReqApprvlStatus</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentReqState__c</fullName>
        <label>Recruitment Requisition State</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Recruitment Requisition State</masterLabel>
            <refAttrDeveloperName>RecruitmentReqState</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentReqVacancyType__c</fullName>
        <label>Recruitment Req Vacancy Type</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Recruitment Req Vacancy Type</masterLabel>
            <refAttrDeveloperName>RecruitmentReqVacancyType</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentRequisitionType__c</fullName>
        <label>Recruitment Requisition Type</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Recruitment Requisition Type</masterLabel>
            <refAttrDeveloperName>RecruitmentRequisitionType</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequisitionIdentifier__c</fullName>
        <label>Requisition Identifier</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Requisition Identifier</masterLabel>
            <refAttrDeveloperName>RequisitionIdentifier</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyCount__c</fullName>
        <label>Vacancy Count</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Vacancy Count</masterLabel>
            <refAttrDeveloperName>VacancyCount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyDescription__c</fullName>
        <label>Vacancy Description</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Vacancy Description</masterLabel>
            <refAttrDeveloperName>VacancyDescription</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyTitleName__c</fullName>
        <label>Vacancy Title</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Vacancy Title</masterLabel>
            <refAttrDeveloperName>VacancyTitleName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyTitle__c</fullName>
        <label>[DoNotUse]Vacancy Title</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>[DoNotUse]Vacancy Title</masterLabel>
            <refAttrDeveloperName>VacancyTitle</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Recruitment Requisition</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Recruitment Requisition</referenceEntityGroup>
        <referenceEntityName>RecruitmentRequisition</referenceEntityName>
        <referenceEntitySubjectArea>Recruitment Requisition</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>